<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btnEnsalada"
        android:layout_width="257dp"
        android:layout_height="135dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="160dp">

        <TextView
            android:id="@+id/textoBtnEnsalada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="59dp" />

        <ImageView
            android:id="@+id/iconoBtnEnsalada"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="17dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btnSopa"
        android:layout_width="257dp"
        android:layout_height="135dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textoBtnSopa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="59dp" />

        <ImageView
            android:id="@+id/iconoBtnSopa"
            android:layout_width="80dp"
            android:layout_height="79dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btnCarne"
        android:layout_width="257dp"
        android:layout_height="135dp"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="160dp">

        <TextView
            android:id="@+id/textoBtnCarne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="59dp" />

        <ImageView
            android:id="@+id/iconoBtnCarne"
            android:layout_width="91dp"
            android:layout_height="86dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="19dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btnPescado"
        android:layout_width="257dp"
        android:layout_height="135dp"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textoBtnPescado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="59dp" />

        <ImageView
            android:id="@+id/iconoBtnPescado"
            android:layout_width="78dp"
            android:layout_height="73dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>