<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/nombrePlatoIntroducido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Nombre del plato"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:textColorLink="@android:color/background_dark"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="75dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/recetaPlatoIntroducida"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="-69dp" />

    <EditText
        android:id="@+id/recetaPlatoIntroducida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Descripcion de la receta"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:textColorLink="@android:color/background_dark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/nombrePlatoIntroducido"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/ingredientesIntroducidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Ingredientes"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:textColorLink="@android:color/background_dark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/recetaPlatoIntroducida"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/recetaPlatoIntroducida"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/recetaPlatoIntroducida"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/enlaceYoutubeIntroducido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Enlace a Youtube"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:textColorLink="@android:color/background_dark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/ingredientesIntroducidos"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/ingredientesIntroducidos"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ingredientesIntroducidos"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/addImagenPlato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seleccionar imagen"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="21dp"
        app:layout_constraintRight_toRightOf="@+id/enlaceYoutubeIntroducido"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/enlaceYoutubeIntroducido"
        android:layout_marginRight="22dp" />

    <ImageView
        android:id="@+id/imagenSeleccionadaPlato"
        android:layout_width="90dp"
        android:layout_height="62dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/btnDonePlato"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@+id/enlaceYoutubeIntroducido"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="89dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.945" />

    <Button
        android:id="@+id/btnDonePlato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terminar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>