<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.ulpgc.eite.clean.mvp.sample.platos.PlatosView">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnAddPlato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"

            app:backgroundTint="@android:color/background_light"
            app:srcCompat="@android:drawable/ic_input_add" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listaPlatos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>
    </LinearLayout>

</RelativeLayout>